--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,7 @@ push:
 branches: [main]
 pull_request:
 branches: [main]
-jobs:
-build:
+jobs:build:
 runs-on: ubuntu-latest
 strategy:
 matrix:
@@ -16,5 +15,5 @@ steps:
 uses: actions/setup-node@v2
 with:
 node-version: ${{ matrix.node-version }}
-- run: npm install
-- run: npm test
+- run:npm install
+- run:npm test
