--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ branches: [main]
 pull_request:
 branches: [main]
 jobs:build:
-runs-on: ubuntu-latest
+runs-on: windows-latest
 strategy:
 matrix:
 node-version: [14, 16, 18]
